Fix vertical alignment

--- a/enterprise/app/sidebar/sidebar.css
+++ b/enterprise/app/sidebar/sidebar.css
@@ -255,6 +255,6 @@
   }
 
   .sidebar .sidebar-toggle {
-    display: block;
+    display: flex;
   }
 }
